# project_manager_cli

./: CONTRIBUTING.md  Cargo.toml  PREVIEW.md  README.md  flake.nix  result  wardex-goto.sh
.devcontainer/: devcontainer.json
nix/: hm-module.nix
src/: config.rs  lib.rs  main.rs
src/core/: auditor.rs  cleaner.rs  mod.rs  search.rs  state.rs  watcher.rs
src/engine/: auditor.rs  cleaner.rs  ctf.rs  dev.rs  mod.rs  scaffold.rs  search.rs  stats.rs  status.rs  undo.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs  update.rs
src/utils/: fs.rs  mod.rs  ui.rs
tests/: Dockerfile  cli_integration.rs  integration_suite.sh  run_tests.sh
